fix end match with spectator