@@ -18,32 +18,37 @@ public class RespawnRunnable extends BukkitRunnable {
 
     private final Practice main;
     private final List<Set<UUID>> players;
+    private final List<UUID> spectators;
     private Duel duel;
 
-    public RespawnRunnable(final List<Set<UUID>> players, final Practice main) {
+    public RespawnRunnable(final List<Set<UUID>> players, final List<UUID> spectators, final Practice main) {
         this.main = main;
         this.players = players;
-
-        if (!players.isEmpty() && !players.get(0).isEmpty()) {
-            UUID firstPlayerUUID = players.get(0).iterator().next();
+        this.spectators = spectators;
+        if (!players.isEmpty() && !players.getFirst().isEmpty()) {
+            UUID firstPlayerUUID = players.getFirst().iterator().next();
             duel = Utils.getDuelByUUID(firstPlayerUUID);
         }
     }
 
     @Override
     public void run() {
-        for (Set<UUID> uuids : players) {
-            for (UUID uuid : uuids) {
-                Duel duelGetter = duel != null ? duel : Utils.getDuelBySpectator(uuid);
-                if (duelGetter != null && !duelGetter.getDisconnected().contains(uuid)) {
-                    Utils.sendToSpawn(uuid, true);
-                    if (Bukkit.getPlayer(uuid) != null) {
-                        MatchUtils.multiArena(uuid, true, false);
-                    }
+        this.players.forEach(uuids -> uuids.forEach(playersInMatch -> {
+            if (!duel.getDisconnected().contains(playersInMatch)) {
+                Utils.sendToSpawn(playersInMatch, true);
+                if (Bukkit.getPlayer(playersInMatch) != null) {
+                    MatchUtils.multiArena(playersInMatch, true, false);
                 }
             }
+        }));
+        if (!this.spectators.isEmpty()) {
+            this.spectators.forEach(uuid -> {
+                Utils.sendToSpawn(uuid, true);
+                if (Bukkit.getPlayer(uuid) != null) {
+                    MatchUtils.multiArena(uuid, true, false);
+                }
+            });
         }
-
         if (duel != null) {
             final boolean ranked = duel.isRanked();
             final Kit kit = duel.getKit();
@@ -53,7 +58,6 @@ public class RespawnRunnable extends BukkitRunnable {
             main.getManagerHandler().getInventoryManager().refreshQueueInventory(ranked, kit);
             main.getManagerHandler().getInventoryManager().refreshSpectateInventory();
         }
-
         cancel();
     }
 }
